Update MAD description

--- a/src/main/webui/src/app/home/home.component.html
+++ b/src/main/webui/src/app/home/home.component.html
@@ -7,8 +7,10 @@
       <i class="fa fa-angle-up rotate-icon float-end pointer" *ngIf="showDetails"  (click)="showDetails=false">&nbsp;<span>Hide Details</span></i>
       <br><br>
       <div *ngIf="showDetails">
-      <p>This workshop consists of a number different modules, each highlighting a particular use case, development principle or technology. The modules have a common overarching story, revolving around the e-commerce site of a fictitious retail company (Globex).
-      Globex has undergone significant modernization and they are keen to build on their application modernization efforts to rapidly build new functionalities.
+      <p>
+        Welcome to the Modern App Dev Roadshow Dev Track. This is a set of hands-on workshops to help you learn how to build modern applications using Red Hat technologies. This workshop consists of a number different modules, each highlighting a particular use case, development principle or technology. The modules have a common overarching story, revolving around the e-commerce site of a fictitious retail company called Globex. 
+      </p>
+      <p>The workshop allows you to quickly pick a set of opinionated custom “paths” through the modules based on high-level needs, and then customize it to suit, or create a completely custom path of their own. Over time, we can use the popularity of choices made by the field to refine the options presented.
       </p>
       <p>
         The modules are independent from each other and can be taken in any combination or order.
