Update MAD logo

--- a/src/main/webui/src/app/home/home.component.html
+++ b/src/main/webui/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid mb-2 mt-2">
   <div class="card">
     <div class="card-body">
-      <img src="/assets/redhat.png" class="logo float-start">
+      <img src="/assets/mad.png" class="logo float-start">
       <h3 class="float-start pointer" (click)="showDetails=!showDetails">Modern App Dev Roadshow Dev Track: Deploy your adventure </h3>
       <i class="fa fa-angle-down rotate-icon float-end pointer" *ngIf="!showDetails" (click)="showDetails=true">&nbsp;<span>Read Details</span></i>
       <i class="fa fa-angle-up rotate-icon float-end pointer" *ngIf="showDetails"  (click)="showDetails=false">&nbsp;<span>Hide Details</span></i>
